fix: 修改构建配置