@@ -102,9 +102,6 @@
                     <nativeImageArgs>
                         <!-- “快速构建”模式，以减少在开发过程中生成本机可执行文件所需的时间。请注意，此模式可能会对峰值性能和生成的可执行文件的大小产生负面影响，因此建议仅用于开发目的。 -->
                         <!--<arg>-Ob</arg>-->
-                        <!-- 现在默认启用并已弃用，因为不再需要它。 -->
-                        <!--<arg>&#45;&#45;allow-incomplete-classpath</arg>-->
-                        <arg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED</arg>
                     </nativeImageArgs>
                     <releaseConfiguration>
                         <!-- all targets -->
